--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "express": "^4.19.2",
     "mongoose": "^8.3.3",
     "nodemon": "^3.1.0",
+    "serverless-http": "^3.2.0",
     "uuid": "^9.0.1"
   }
 }
